--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="player">
-            <video id="video" poster="./images/georgemichael-fastlove1.jpg" muted src="./videos/videoplayback.mp4"  width="400"></video>    
+            <video id="video" poster="./images/georgemichael-fastlove1.jpg" src="./videos/videoplayback.mp4"  width="400"></video>    
             <div class="player-overlay">
                 <h2 class="player-title">Fast Love</h2>
                 <div class="player-actions">
